k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: caiatech-website-lb
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: caiatech-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
