k8s/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caiatech-website
  namespace: default
  labels:
    app: caiatech-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caiatech-website
  template:
    metadata:
      labels:
        app: caiatech-website
    spec:
      containers:
      - name: caiatech-website
        image: gcr.io/caiatech/caiatech-website:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
            cpu: "10m"
          limits:
            memory: "32Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: caiatech-website-service
  namespace: default
spec:
  selector:
    app: caiatech-website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
