k8s/ingress-selfsigned.yaml
apiVersion: v1
kind: Service
metadata:
  name: caiatech-website-nodeport
spec:
  type: NodePort
  selector:
    app: caiatech-website
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caiatech-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - caiatech.com
    - www.caiatech.com
    secretName: cloudflare-origin-cert
  rules:
  - host: caiatech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caiatech-website-nodeport
            port:
              number: 80
  - host: www.caiatech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caiatech-website-nodeport
            port:
              number: 80
