k8s/ingress-ssl.yaml
apiVersion: v1
kind: Service
metadata:
  name: caiatech-website-nodeport
spec:
  type: NodePort
  selector:
    app: caiatech-website
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caiatech-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - caiatech.com
    - www.caiatech.com
    secretName: caiatech-tls
  rules:
  - host: caiatech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caiatech-website-nodeport
            port:
              number: 80
  - host: www.caiatech.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caiatech-website-nodeport
            port:
              number: 80
